comment out testing

--- a/baggie/CMakeLists.txt
+++ b/baggie/CMakeLists.txt
@@ -57,19 +57,19 @@ install(
 ##########
 ## Test ##
 ##########
-if (BUILD_TESTING)
-  find_package(ament_cmake_nose REQUIRED)
-  find_package(example_interfaces REQUIRED)
-  find_package(rclpy REQUIRED)
-
-  ament_add_nose_test(Sequential test/test_sequential.py)
-  ament_add_nose_test(SequentialCompressed test/test_sequential_compressed.py)
-  ament_add_nose_test(BaggieWriter test/test_baggie_writer.py)
-  ament_add_nose_test(BaggieReader test/test_baggie_reader.py)
-  ament_add_nose_test(ContextManager test/test_context_mgr.py)
-  ament_add_nose_test(Meta test/test_meta.py)
-  ament_add_nose_test(Stamping test/test_stamping.py)
-endif()
+# if (BUILD_TESTING)
+#   find_package(ament_cmake_nose REQUIRED)
+#   find_package(example_interfaces REQUIRED)
+#   find_package(rclpy REQUIRED)
+# 
+#   ament_add_nose_test(Sequential test/test_sequential.py)
+#   ament_add_nose_test(SequentialCompressed test/test_sequential_compressed.py)
+#   ament_add_nose_test(BaggieWriter test/test_baggie_writer.py)
+#   ament_add_nose_test(BaggieReader test/test_baggie_reader.py)
+#   ament_add_nose_test(ContextManager test/test_context_mgr.py)
+#   ament_add_nose_test(Meta test/test_meta.py)
+#   ament_add_nose_test(Stamping test/test_stamping.py)
+# endif()
 
 ##############
 ament_export_dependencies(ament_cmake)
